--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Recipes by Odin</title>
+    <title>Recipes By Odin</title>
   </head>
   <body>
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="./recipes/lamb-souvlaki.html">Lamb Souvlaki</a></li>
-      <li><a href="./recipes/kalbi.html">Kalbi(Korean BBQ Short Ribs)</a></li>
+      <li><a href="./recipes/kalbi.html">Kalbi(Korean BBQ Short Ribs )</a></li>
     </ul>
   </body>
 </html>
